--- a/main.html
+++ b/main.html
@@ -12,10 +12,10 @@
 </script>
 <blockquote>
       <p class="questions">
-        Who was the first female to become the governor of an Indian state?
+       1. Who was the first female to become the governor of an Indian state?
       </p>
-      <p class="questions">Who among first Woman to climb Mount Everest twice?</p>
-      <p class="questions">Who is President of India?</p>
+      <p class="questions">2.Who among first Woman to climb Mount Everest twice?</p>
+      <p class="questions">3.Who is President of India?</p>
     </blockquote>
 </body>
 
