--- a/main.html
+++ b/main.html
@@ -10,9 +10,14 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<p><blockquote class="questions">Who was the first female to become the governor of an Indian state?</blockquote></p>
-    <p><blockquote class="questions">Who among first Woman to climb Mount Everest twice?</blockquote></p>
-    <p><blockquote class="questions">Who is President of India?</blockquote></p>
+<blockquote>
+      <p class="questions">
+        Who was the first female to become the governor of an Indian state?<br>
+        Who among first Woman to climb Mount Everest twice?<br>
+        Who is President of India?
+      </p>
+      
+    </blockquote>
 </body>
 
 </html>
