--- a/main.html
+++ b/main.html
@@ -10,13 +10,15 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<blockquote>
-      <p class="questions">
-        Who was the first female to become the governor of an Indian state?<br>
-        Who among first Woman to climb Mount Everest twice?<br>
-        Who is President of India?
-      </p>
+<blockquote class="questions">
+      <p >Who was the first female to become the governor of an Indian state?</p>
       
+    </blockquote>
+	<blockquote class="questions">
+        Who among first Woman to climb Mount Everest twice?
+    </blockquote>
+	<blockquote class="questions">
+        Who is President of India?
     </blockquote>
 </body>
 
